--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,7 +58,7 @@
                        <h4 class="card-title toca-uppercase">Hardship</h4>
                        <!--Text-->
                        <p class="card-text">Vivamus condimentum ultrices magna, a lobortis justo tincidunt sed. Donec vitae mattis lectus.</p>
-                       <%= link_to page_path(:apply), class: "btn btn-primary btn-md" do %>
+                       <%= link_to new_hardship_path, class: "btn btn-primary btn-md" do %>
                           Apply for Hardship
                        <% end %>
                   </div>
