--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -35,7 +35,7 @@
           <h4 class="font-weight-bold mb-3 toca-uppercase"><strong>Hardship</strong></h4>
           <p class="dark-grey-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
             voluptatum deleniti atque corrupti quos dolores.</p>
-          <a class="btn btn-primary btn-md">Read more</a>
+          <%= link_to "Apply for Hardship", new_hardship_path, class: "btn btn-primary btn-md" %>
 
         </div> <!-- Grid column -->
 
