Hardship Form Styled

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,6 +91,7 @@ $color-light-grey: #D1D3D4 !important;
 
 .btn-primary  { background-color: $color-toca-red; }
 .btn-secondary  { background-color: $color-toca-green; }
+.btn-light { background-color: $color-light-grey; }
 
 * { border-radius: 0px !important; }
 
